@@ -8,7 +8,7 @@ valgrindflags='--xml=yes --log-file=/dev/null --track-origins=yes --read-var-inf
 
 USAGE=$'
 [-s8?
-@(#)$Id: shtests (ksh 93u+m) 2021-12-28 $
+@(#)$Id: shtests (ksh 93u+m) 2023-05-18 $
 ]
 [-author?David Korn <dgk@research.att.com>]
 [-author?Glenn Fowler <gsf@research.att.com>]
@@ -265,6 +265,7 @@ case $SHELL in
 */*)	SHELL=$d/$SHELL;;
 *)	SHELL=$(whence $SHELL);;
 esac
+export userPATH=$PATH  # in case test scripts need it
 PATH=$(
 	builtin getconf 2>/dev/null || PATH=/run/current-system/sw/bin:/usr/xpg7/bin:/usr/xpg6/bin:/usr/xpg4/bin:/bin:/usr/bin:$PATH
 	getconf PATH 2>/dev/null
@@ -347,7 +348,7 @@ do	[[ $i == *.sh ]] || i+='.sh'
 	t=$(	case $i in
 		glob.sh)	grep -c '^[[:blank:]]*test_[a-z]\{3,\}' $i ;;
 		leaks.sh)	grep -c ^TEST $i ;;
-		printf.sh)	grep -c '^T ' $i ;;
+		printf.sh)	grep -c '^[[:blank:]]*T ' $i ;;
 		pty.sh)		grep -c 'tst ' $i ;;
 		*)		grep -c err_exit $i ;;
 		esac	)
